fix: remove scrollbar firefox styles because colide with the webkit styles

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -120,10 +120,6 @@
         &::-webkit-scrollbar-thumb:hover {
             @apply background-primary;
         }
-
-        /** Firefox **/
-        scrollbar-width: thin;
-        scrollbar-color: #999 #f4f4f4;
     }
 
     .\[grid-cols-\[max-content_1fr_1fr\]\] {
